# airport-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  airport_api_sample_data.json  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: fixtures.py  test_admin.py  test_models.py  test_serializers.py  test_views.py
airport/: admin.py  api_schema.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
airport/migrations/: 0001_initial.py  0002_airplane_created_at_airplane_updated_at_and_more.py  0002_alter_airplane_name_alter_airplanetype_name_and_more.py  0003_airplane_image.py  0003_alter_flight_arrival_time_and_more.py  0004_remove_order_number.py
airport/tests/: test_admin.py  test_models.py  test_serializers.py  test_views.py
base/: models.py
core/: settings.py  urls.py
